docker-registry/base/credential-initializer-deployment.yaml
# This deployment just triggers the credential rotator cronjob
# immediately and deletes itself afterwards
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-credential-initializer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $(CREDENTIAL_INIT_DEPLOYMENT_NAME)
  template:
    metadata:
      labels:
        app: $(CREDENTIAL_INIT_DEPLOYMENT_NAME)
    spec:
      containers:
      - name: credential-rotator-trigger
        image: bitnami/kubectl:1.15
        command: ["/bin/sh", "-c"]
        args:
        - |
            set -x
            kubectl delete job ${OWN_NAME}-job -n "$NAMESPACE"
            kubectl create job ${OWN_NAME}-job -n "$NAMESPACE" --from=cronjob/$CREDENTIAL_ROTATOR_CRON_NAME &&
            kubectl wait --for condition=complete -n "$NAMESPACE" "job/${OWN_NAME}-job" --timeout 2m &&
            touch /tmp/initialized
            sleep 300
            kubectl delete job ${OWN_NAME}-job -n "$NAMESPACE"
            kubectl delete -n "$NAMESPACE" deployment/$OWN_NAME
        readinessProbe:
          exec:
            command:
              - cat
              - /tmp/initialized
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "10m"
            memory: "8Mi"
          limits:
            cpu: "50m"
            memory: "32Mi"
      automountServiceAccountToken: true
      serviceAccountName: registry-credential-initializer
