docker-registry/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $(DEPLOYMENT_NAME)
  template:
    metadata:
      labels:
        app: $(DEPLOYMENT_NAME)
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      containers:
      - name: registry
        image: registry:2
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: images
          mountPath: /var/lib/registry
#        - mountPath: /certs
#          name: certs
#        - mountPath: /auth
#          name: auth
      - name: nginx
        image: nginx:1.17-alpine
        ports:
        - name: docker
          containerPort: 443
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx
        - name: cert
          mountPath: /etc/nginx/tls
        - name: auth
          mountPath: /etc/nginx/auth
      volumes:
      - name: images
        emptyDir: {}
      - name: nginx-conf
        configMap:
          name: registry-nginx-conf
      - name: cert
        secret:
          secretName: $(CERT_SECRET_NAME)
      - name: auth
        secret:
          secretName: $(DEPLOYMENT_NAME)-htpasswd
