docker-registry/base/registry-clusterip-injector-daemonset.yaml
# This daemonset ensures that the registry's (public) name is mapped
# to its service's ClusterIP on each node.
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: registry-clusterip-injector-daemonset
spec:
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        run-once-daemonset: registry-clusterip-injector-daemonset
    spec:
      containers:
      - name: registry-clusterip-injector-daemonset
        image: alpine:3.10
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c"]
        args:
        - |
            set -eo pipefail
            [ "$SERVICE_NAME" ] || (echo SERVICE_NAME env var is empty >&2; false)
            SVC_NAME="${SERVICE_NAME}.${SERVICE_NAMESPACE}.svc"
            NAMES="$SVC_NAME"
            if [ "$SVC_NAME" != "$COMMON_NAME" ]; then
              NAMES="$COMMON_NAME $NAMES"
            fi
            SVC_IP="$(getent hosts "$SVC_NAME" | awk '{ print $1 }')" || (echo "Cannot resolve IP of service '$SVC_NAME'" >&2; false)
            SVC_NAME_ESCAPED="$(echo "$SVC_NAME" | sed 's/\./\\./g')"
            HOSTS_FILE=/host/etc/hosts
            grep -Ev "\s+$SVC_NAME_ESCAPED(\s+|\$)" $HOSTS_FILE > ${HOSTS_FILE}.tmp
            echo "$SVC_IP $NAMES" >> ${HOSTS_FILE}.tmp
            mv ${HOSTS_FILE}.tmp $HOSTS_FILE || cat ${HOSTS_FILE}.tmp > $HOSTS_FILE # workaround for containerized k8s where /etc/hosts is mounted
            rm -f ${HOSTS_FILE}.tmp
            echo "Node's /etc/hosts updated: $SVC_IP $NAMES"
            while true; do sleep 86400; done
        volumeMounts:
        - name: etc-hosts
          mountPath: /host/etc
          readOnly: false
      terminationGracePeriodSeconds: 10
      volumes:
      - name: etc-hosts
        hostPath:
          path: /etc
