docker-registry/base/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: $(DEPLOYMENT_NAME)
