docker-registry/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: $(DEPLOYMENT_NAME)
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
