docker-registry/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - docker.example.org
  - secretName: registry-tls
  rules:
  - host: docker.example.org
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
        path: /
