docker-registry/base/registry-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: $(COMMON_NAME)
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: http
#      - path: /auth/token
#        backend:
#          serviceName: docker-auth
#          servicePort: 5001
  tls:
  - hosts:
      - $(COMMON_NAME)
    secretName: $(CERT_SECRET_NAME)
